🐛 FIX: Proper spacing for the logo URL control

--- a/assets/scss/customizer/login-designer-customize-controls.scss
+++ b/assets/scss/customizer/login-designer-customize-controls.scss
@@ -51,7 +51,7 @@
 
 // Title spacing.
 #customize-control-login_designer_settings-logo_url {
-	margin-bottom: 24px;
+	margin-bottom: 20px !important;
 	margin-top: 13px;
 }
 
